Player Argument
Add Player Argument for Operators
Add usage loggiing.